# my-cool-beer-api

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  beer-rating-project.cabal  docker-compose.yml  stack.yaml
nginx/: nginx.conf
src/: Config.hs  Lib.hs
src/Api/: Api.hs  Brewer.hs
src/Models/: Database.hs
