name: beer-rating-project
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2019 Timothy Barraclough
maintainer: timothy@flora-creative.com
homepage: https://github.com/timothybarraclough/beer-rating-project#readme
category: Web
author: Timothy Barraclough
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/beer-rating-project

library
    exposed-modules:
        Lib
        Api.Api
        Api.Brewer
        Config
        Models.Database
    build-depends:
        base >=4.7 && <5,
        aeson -any,
        bytestring -any,
        monad-logger -any,
        mtl -any,
        natural-transformation -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-template -any,
        safe -any,
        servant -any,
        servant-server -any,
        transformers -any,
        wai -any,
        wai-extra -any,
        warp -any
    default-language: Haskell2010
    hs-source-dirs: src

executable beer-rating-project
    main-is: Main.hs
    build-depends:
        base -any,
        beer-rating-project -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite beer-rating-project-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        beer-rating-project -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
